# app/Http/Controllers/Controller.php
@@ -12,6 +12,14 @@ use Illuminate\Routing\Controller as BaseController;
  *         title="API starships and vehicles",
  *         version="1.0",
  *         description="API for handle inventory of Starships and Vehicles",
+ *     ),
+ *     @OA\Tag(
+ *     name="Vehicles",
+ *     description="Endpoints related to vehicle operations",
+ *     ),
+ *      @OA\Tag(
+ *     name="Starships",
+ *     description="Endpoints related to starship operations",
  *     )
  * )
  */
